# Git2in

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  git2in  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py
completions/: generate_completions.py
helm/git2in/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/git2in/templates/: _helpers.tpl
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  persistent-volume.yaml  secret.yaml  service-account.yaml  service.yaml
scripts/: setup.sh
scripts/docker/: dev.sh
src/: main.py
src/api/: __init__.py  app.py  dependencies.py  exception_handlers.py  git_http.py  health.py  metrics_endpoint.py  router.py
src/api/auth/: dependencies.py  (+1 more)
src/cli/: __init__.py  main.py
src/config/: settings.py
src/core/: config.py  errors.py  exceptions.py  types.py
src/infrastructure/: __init__.py  concurrency.py  exceptions.py  filesystem.py  git_metrics.py  git_protocol.py  git_subprocess.py  hooks.py  logging.py  logging_processors.py  metadata.py  metrics.py  permissions.py
src/plugins/: __init__.py  base.py  config.py  external.py  loader.py  manager.py  registry.py  sandbox.py
tests/: conftest.py  test_auth.py  test_auth_api.py  test_authorization.py  test_git_http_integration.py  test_git_protocol.py  test_git_subprocess.py  test_hooks.py  test_management_api.py  test_observability.py
(+131 files in other folders)
